--- a/earth/glfw-3.2/CMakeLists.txt
+++ b/earth/glfw-3.2/CMakeLists.txt
@@ -2,13 +2,11 @@ set(CMAKE_LEGACY_CYGWIN_WIN32 OFF)
 
 project(GLFW C)
 
-cmake_minimum_required(VERSION 2.8.12)
-
-if (NOT CMAKE_VERSION VERSION_LESS "3.0")
-    # Until all major package systems have moved to CMake 3,
-    # we stick with the older INSTALL_NAME_DIR mechanism
-    cmake_policy(SET CMP0042 OLD)
+cmake_minimum_required(VERSION 3.5...3.30)
+if(POLICY CMP0042)
+  cmake_policy(SET CMP0042 NEW)
 endif()
+
 
 set(GLFW_VERSION_MAJOR "3")
 set(GLFW_VERSION_MINOR "2")
